[package]
name = "monkey"
version = "0.1.0"
authors = ["macdonald"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "monkey"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "monkey-interpreter"
path = "src/main.rs"
test = false
bench = false

[[test]]
name = "tests"
path = "tests/lexer.rs"
